syntax = "proto3";

package network_helper;

message REQUEST_PING {
    string ID = 1;
}
message REQUEST_CONTACT{
    string ID = 1;
}
message REQUEST_DATA{
    string KEY = 1;
}
message REQUEST_STORE{
    string KEY = 1;
    bytes  VALUE = 2;
}
message RETURN_PING {
    string ID = 1;
}
message RETURN_CONTACTS {
    message CONTACT_INFO {
        string IP = 1;
        string PORT =2;
        string ID = 3;
    }

    repeated CONTACT_INFO contact_info = 1;
}
message RETURN_DATA{
  string VALUE = 1;
}
message RETURN_STORE
{
    string VALUE = 1;
}
message Container {
    string REQUEST_TYPE = 1;
    string  REQUEST_ID = 2;
    oneof attachment {
        REQUEST_PING request_ping = 3;
        REQUEST_CONTACT request_contact = 4;
        REQUEST_DATA request_data= 5;
        REQUEST_STORE request_store= 6;
        RETURN_PING return_ping = 7;
        RETURN_CONTACTS return_contacts = 8;
        RETURN_DATA return_data = 9;
        RETURN_STORE return_store = 10;

    }
}